--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class ="border-box">
-        <img src="C:\Users\praveen\Downloads\frame.png" alt="no image">
+        <img src="C:\Users\praveen\Downloads\qr-code-component-main\qr-code-component-main\images\image-qr-code.png" alt="no image">
         <h3>Improve your front-end<br> skills by building projects</h3>
         <p>Scan the QR code to visit Frontend Mentor and take your coding skills</p>
 
